first iteration mobile tweaks fixed list positioning

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ li {
 }
 
   ul {
-    transform: translateY(50%);
+    transform: translateY(25%);
     height: 100%;
     width:100%;
   }
